# chat-websockets-fastapi

./: Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  pyproject.toml  repo_name.txt
app/: config.py  database.py  exceptions.py  main.py
app/chat/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/migration/: env.py
app/migration/versions/: 116e8f0cfdf0_initial_revision.py
app/users/: auth.py  dependensies.py  models.py  router.py  schemas.py
