[tool.poetry]
name = "habr1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = "0.31.0"
sqlalchemy = "2.0.35"
alembic = "1.13.3"
pydantic = {version = "2.9.2", extras = ["email"]}
bcrypt = "4.0.1"
passlib = "1.7.4"
python-jose = "3.3.0"
websockets = "13.1"
aiosqlite = "0.20.0"
pydantic-settings = "2.5.2"
jinja2 = "3.1.4"
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
